Clean Up structured Output tests & more test cases